--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>In progress</title>
+    <title>In Progress</title>
   </head>
+  <body>
+    <p>Hi</p>
+  </body>
 </html>
