--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1>avalanches.wtf</h1>
     <p class="subtitle">my space for learning and building things</p>
 
-    <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4539207" style='border:none;'></iframe> width="300" alt="tryhackme badge">
+    <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4539207" style='border:none;'></iframe>
 
     <div class="section-title">socials</div>
     <p class="socials">
