Update iframe attributes for better display

--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
     <h1>avalanches.wtf</h1>
     <p class="subtitle">my space for learning and building things</p>
 
-    <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4539207" style='border:none;'></iframe>
+    <iframe
+      src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4539207"
+        width="100%" 
+          height="350"
+            style="border: none; overflow: hidden;">
+    
+    </iframe>
 
     <div class="section-title">socials</div>
     <p class="socials">
