--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     a:hover {
       text-decoration: underline;
     }
+    footer{
+      margin-top: 60px
+      color: #9ca3af;
+      font-size: 13px;
+      text-align: center;}
+    
   </style>
 </head>
 <body>
