Modify h1 gradient and remove animation
Updated background gradient for h1 and adjusted size.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ typeTitle();
 </script>
 
 <title>avalanches.wtf</title>
-  
+    
 <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
 <link rel="shortcut icon" href="/assets/favicon.ico" />
@@ -75,22 +75,11 @@ body {
 }
 
 h1 {
-  font-size: 46px;
-  font-weight: 700;
-  margin: 0 0 5px 0;
-  background: linear-gradient(90deg, #a78bfa, #f472b6, #34d399);
+  background: linear-gradient(90deg, #a78bfa, #f472b6, #6b38c9);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-size: 300% 100%;
-  animation: gradient-animation 3s linear infinite;
+  background-size: 250% 100%;
 }
-
-@keyframes gradient-animation {
-  0% { background-position: 0% 0%; }
-  50% { background-position: 100% 0%; }
-  100% { background-position: 0% 0%; }
-}
-
 
 .subtitle {
   color: #9ca3af;
