Add Open Graph meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:title" content="avalanches.wtf" />
+<meta property="og:type" content="blog" />
+<meta property="og:image" content="https://raw.githubusercontent.com/gvcxm2j5KQbrnl/avalanches.wtf/refs/heads/main/assets/web-app-manifest-512x512.png" />
+<meta property="og:description" content="my space for learning and building things.">
 <script>
 const titleText = "avalanches.wtf";
 let index = 0;
