Add link to blogs section in index.html

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@ footer {
 
   <div class="section-title">projects</div>
   <div class="projects">
+    <p><a href="https://avalanches.wtf/blogs/" target="_blank" rel="noopener noreferrer">
+         </a></p>
+      My Blogs
     <p><a href="https://github.com/gvcxm2j5KQbrnl/Local-Password-Manager" target="_blank" rel="noopener noreferrer">
       Local Password Manager
     </a></p>
