--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -7,25 +8,7 @@
 <meta property="og:type" content="blog" />
 <meta property="og:image" content="https://raw.githubusercontent.com/gvcxm2j5KQbrnl/avalanches.wtf/refs/heads/main/assets/web-app-manifest-512x512.png" />
 <meta property="og:description" content="my space for learning and building things.">
-<script>
-const titleText = "avalanches.wtf";
-let index = 0;
-
-function typeTitle() {
-  document.title = titleText.slice(0, index + 1);
-  index++;
-  if (index < titleText.length) {
-    setTimeout(typeTitle, 200); // speed in ms
-  } else {
-    setTimeout(() => {
-      index = 0;
-      typeTitle();
-    }, 2000); // pause before repeating
-  }
-}
-
-typeTitle();
-</script>
+<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
 <title>avalanches.wtf</title>
     
@@ -36,102 +19,6 @@ typeTitle();
 <meta name="apple-mobile-web-app-title" content="avalanches" />
 <link rel="manifest" href="/assets/site.webmanifest" />
   
-<style>
-html, body {
-  height: 100%;
-  margin: 0;
-  background: #0b0b0c;
-  color: #f2f2f2;
-  font-family: Inter, Arial, sans-serif;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  text-align: center;
-}
-
-.container {
-  max-width: 720px;
-  margin: 0 auto;
-  padding: 20px 20px 120px;
-}
-
-.typing {
-  font-size: 46px;
-  font-weight: 700;
-  border-right: 3px solid #a78bfa;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 0;
-  margin: 0 auto 10px;
-  animation: typing 2s steps(14) forwards, blink 0.5s step-end infinite alternate;
-}
-
-@keyframes typing {
-  0% { width: 0; }
-  100% { width: 14ch; } /* number of characters */
-}
-
-@keyframes blink {
-  50% { border-color: transparent; }
-}
-
-h1 {
-  background: linear-gradient(90deg, #a78bfa, #f472b6, #6b38c9);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 250% 100%;
-}
-
-.subtitle {
-  color: #9ca3af;
-  font-size: 17px;
-  margin: 0 0 10px 0;
-}
-
-.badge-thm-wrapper {
-  margin-bottom: 15px;
-}
-
-.section-title {
-  font-size: 24px;
-  font-weight: 600;
-  margin: 20px 0 10px;
-}
-
-.socials {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-
-.socials img {
-  width: 26px;
-}
-
-.projects p {
-  margin: 0;
-}
-
-a {
-  color: #a78bfa;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-footer {
-  padding: 40px 0 20px;
-  color: #9ca3af;
-  font-size: 13px;
-}
-</style>
 </head>
 <body>
 <div class="container">
