Change stylesheet link from CSS to SCSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image" content="{{ '/assets/web-app-manifest-512x512.png' | absolute_url }}" />
   <meta property="og:description" content="my space for learning and building things.">
   
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/style.scss' | relative_url }}">
 
   <title>avalanches.wtf</title>
   
