--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="projects">
       <p>
         <a href="{{ '/blogs/' | relative_url }}">
-          My IT-Logs & Blogs
+          My Blog
         </a>
       </p>
       <p>
