--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <body class="home-layout"> <div class="container">
     <h1 class="typing">avalanches.wtf</h1>
     <p class="subtitle">my space for learning and building things</p>
 
