--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <meta property="og:title" content="avalanches.wtf" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="{{ '/assets/web-app-manifest-512x512.png' | absolute_url }}" />
   <meta property="og:description" content="my space for learning and building things.">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#0a0a0a">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <title>avalanches.wtf</title>
