--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="{{ '/assets/web-app-manifest-512x512.png' | absolute_url }}" />
   <meta property="og:description" content="my space for learning and building things.">
-  <meta name="theme-color" content="#0a0a0a">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <title>avalanches.wtf</title>
