--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
     <div class="section-title">projects</div>
     <div class="projects">
+            <p>
+        <a href="https://media1.tenor.com/m/lfDATg4Bhc0AAAAd/happy-cat.gif" target="_blank" rel="noopener noreferrer">
+          About Me (In Progress)
+        </a>
+      </p>
       <p>
         <a href="{{ '/blogs/' | relative_url }}">
           My Blog
