--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="section-title">projects</div>
     <div class="projects">
             <p>
-        <a href="https://media1.tenor.com/m/A9GOPpvc4CoAAAAd/komaru-komaru-cat.gif" target="_blank" rel="noopener noreferrer">
+        <a href="https://c.tenor.com/A9GOPpvc4CoAAAAd/tenor.gif" target="_blank" rel="noopener noreferrer">
           About Me (In Progress)
         </a>
       </p>
