--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
       </p>
       <p>
-        <a href="{{ '/blogs/' | relative_url }}">
+        <a href="{{ '/blog/' | relative_url }}">
           My Blog
         </a>
       </p>
