--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="{{ '/assets/web-app-manifest-512x512.png' | absolute_url }}" />
   <meta property="og:description" content="my space for learning and building things.">
+  <meta property="twitter:card" content="summary_large_image"
   <meta name="theme-color" content="#0b0b0c">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
