--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
       </a>
       <a href="https://steamcommunity.com/id/tyu/" target="_blank" rel="noopener noreferrer">
         <img src="https://github.com/user-attachments/assets/cdfc895f-9366-47f3-b5a3-b6a2e8fa0b50" alt="steam">
-      </a>
+        </a>
+      <a href="https://github.com/gvcxm2j5KQbrnl" target="_blank" rel="noopenmer noreferrer"
+        <img src="/assets/github-64.png" alt="Github">
+        </a>
     </div>
 
     <div class="section-title">projects</div>
