--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <a href="https://steamcommunity.com/id/tyu/" target="_blank" rel="noopener noreferrer">
         <img src="https://github.com/user-attachments/assets/cdfc895f-9366-47f3-b5a3-b6a2e8fa0b50" alt="steam">
         </a>
-      <a href="https://github.com/gvcxm2j5KQbrnl" target="_blank" rel="noopenmer noreferrer"
-        <img src="{{'assets/github-64.png' | relative_url }}" alt="Github">
+      <a href="https://github.com/gvcxm2j5KQbrnl" target="_blank" rel="noopener noreferrer">
+        <img src="https://raw.githubusercontent.com/gvcxm2j5KQbrnl/avalanches.wtf/refs/heads/main/assets/github-64.png" alt="Github">
         </a>
     </div>
 
